tests/snapshots/compile__wgsl_color_layerblend_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_layerblend1_background: vec4f,
    u_control_layerblend1_foreground: vec4f,
    u_control_layerblend1_opacity: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn layerblend1_output(uv: vec2f) -> vec4f {
    let bg = u.u_control_layerblend1_background;
    let fg = u.u_control_layerblend1_foreground;
    let w = fg.a * clamp(u.u_control_layerblend1_opacity, 0.0, 1.0);
    let blended = mix(bg.rgb, fg.rgb, w);
    return vec4f(blended, w + bg.a * (1.0 - w));
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return layerblend1_output(uv);
}
