tests/snapshots/compile__wgsl_color_levels_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_levels1_gamma: f32,
    u_control_levels1_inBlack: f32,
    u_control_levels1_inWhite: f32,
    u_control_levels1_outBlack: f32,
    u_control_levels1_outWhite: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn levels1_output(uv: vec2f) -> vec4f {
    let color = unpremultiply(defaultUvMap(uv));
    let inBlack = u.u_control_levels1_inBlack;
    let outBlack = u.u_control_levels1_outBlack;
    let inRange = max(u.u_control_levels1_inWhite - inBlack, 1e-4);
    var t = clamp((color.rgb - inBlack) / inRange, vec3f(0.0), vec3f(1.0));
    t = pow(t, vec3f(1.0 / max(u.u_control_levels1_gamma, 1e-4)));
    return premultiply(vec4f(outBlack + t * ((u.u_control_levels1_outWhite) - outBlack), color.a));
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return levels1_output(uv);
}
