tests/snapshots/compile__wgsl_color_mix_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_mix1_amount: f32,
    u_opt_mix1_curve: i32,
    u_opt_mix1_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn mix1_output(uv: vec2f) -> vec4f {
    let a = defaultUvMap(uv);
    let b = defaultUvMap(uv);
    let amt = clamp(u.u_control_mix1_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix1_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix1_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix1_output(uv);
}
