tests/snapshots/compile__wgsl_color_muxevent_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_checkerboard3_color1: vec4f,
    u_control_checkerboard3_color2: vec4f,
    u_control_checkerboard3_frequency: f32,
    u_control_checkerboard4_color1: vec4f,
    u_control_checkerboard4_color2: vec4f,
    u_control_checkerboard4_frequency: f32,
    u_control_checkerboard5_color1: vec4f,
    u_control_checkerboard5_color2: vec4f,
    u_control_checkerboard5_frequency: f32,
    u_control_checkerboard6_color1: vec4f,
    u_control_checkerboard6_color2: vec4f,
    u_control_checkerboard6_frequency: f32,
    u_float_muxevent1_index: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn checkerboard3_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard3_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard3_color1;
    let c2 = u.u_control_checkerboard3_color2;
    return mix(c1, c2, checker);
}

fn checkerboard4_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard4_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard4_color1;
    let c2 = u.u_control_checkerboard4_color2;
    return mix(c1, c2, checker);
}

fn checkerboard5_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard5_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard5_color1;
    let c2 = u.u_control_checkerboard5_color2;
    return mix(c1, c2, checker);
}

fn checkerboard6_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard6_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard6_color1;
    let c2 = u.u_control_checkerboard6_color2;
    return mix(c1, c2, checker);
}

fn muxevent1_output(uv: vec2f) -> vec4f {
    var colors = array<vec4f, 4>(checkerboard3_output(uv), checkerboard4_output(uv), checkerboard5_output(uv), checkerboard6_output(uv));
    let channel = i32(floor_mod(floor(u.u_float_muxevent1_index) - 1.0, 4.0));
    return colors[channel];
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return muxevent1_output(uv);
}
